--- a/path_planner/CMakeLists.txt
+++ b/path_planner/CMakeLists.txt
@@ -187,4 +187,4 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 add_executable(planner src/path_planner.cpp)
-target_link(planner ${catkin_LIBRARIES})
+target_link_libraries(planner ${catkin_LIBRARIES})
